--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^18.1.0",
     "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.0",
+    "web3": "^1.7.3",
     "webfontloader": "^1.6.28"
   },
   "scripts": {
